@@ -59,5 +59,6 @@ wubi (9.04) UNRELEASED; urgency=low
   * Added mythbuntu to isolist.ini
   * Slight simplification of the frontend
   * Fixed ISO backup during uninstallation
+  * Added finish pages
 
- -- Agostino Russo <agostino.russo@gmail.com>  Mon, 05 Jan 2009 00:27:10 +0000
+ -- Agostino Russo <agostino.russo@gmail.com>  Mon, 05 Jan 2009 00:38:21 +0000
